--- a/index.html
+++ b/index.html
@@ -2069,7 +2069,7 @@
         function getPreparedSpells() {
             const saved = localStorage.getItem('kurt_prepared_spells');
             // Default spells if nothing saved
-            return saved ? JSON.parse(saved) : ['Bless', 'Cure Wounds', 'Shield of Faith'];
+            return saved ? JSON.parse(saved) : ['Bless', 'Cure Wounds', 'Protection from Evil and Good'];
         }
 
         function toggleSpellPrep(spellName) {
