--- a/index.html
+++ b/index.html
@@ -1180,8 +1180,8 @@
                         </div>
 
                         <div style="background: rgba(0,0,0,0.03); padding: 10px; border-radius: 4px;">
-                            <div style="font-family: 'Cinzel', serif; font-size: 0.8rem; color: var(--text-sub);">Bakgrundsdrag</div>
-                            <strong>Publikens Gunst:</strong> <span style="font-family: 'EB Garamond'; font-style: italic;">Kan alltid hitta mat & husrum i utbyte mot en uppvisning i arenan.</span>
+                            <div style="font-family: 'Cinzel', serif; font-size: 0.8rem; color: var(--text-sub);">Bakgrundsdrag (Gladiator)</div>
+                            <strong>Avskräckande Närvaro:</strong> <span style="font-family: 'EB Garamond'; font-style: italic;">I Lisse vet ingen vem jag var, men de ser vad jag är. Värdshusvärdar låter mig sova gratis i salen, inte av vänlighet, utan för att ingen vågar starta bråk när en två meter lång drake i rustning sitter i hörnet. Jag är deras passiva beskydd – betalning genom ren skräckfaktor.</span>
                         </div>
                     </div>
 
