--- a/index.html
+++ b/index.html
@@ -1572,10 +1572,16 @@
                                         Tre lokala fyllerister hånade min rustnings skick. Skratten tystnade när jag reste mig, men det krävdes knytnävar för att få dem att förstå.
                                     </p>
                                     <p style="font-family: 'Caveat'; color: #8b0000; font-size: 1.1rem;">
-                                        "De kallade mig 'Rostriddare'. Jag slogs för min heder. Det kostade mig en natt i häktet, men de skrattar inte längre."
+                                        "De kallade mig 'Rostriddare'. Jag slogs för min heder. Det kostade mig en natt i häktet, men jag märkte att någon i skuggorna iakttog mig noga."
                                     </p>
                                 </li>
-                                <li><span class="timeline-date">Vecka 3</span><span class="timeline-desc">Rekryterad av Råttkungens Hov.</span></li>
+                                <li>
+                                    <span class="timeline-date">Vecka 3</span>
+                                    <span class="timeline-desc" style="display: block; margin-bottom: 5px;"><strong>Rekryterad av Råttkungens Hov</strong></span>
+                                    <p style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-bottom: 8px;">
+                                        En sändebud betalade min borgen. Sa att Råttkungen behöver folk som kan hantera sig själva när det hettar till. Slagsmålet var tydligen en arbetsintervju.
+                                    </p>
+                                </li>
                             </ul>
                         </details>
                         
