--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,7 @@
                                 <strong>Ursprung:</strong> Zügwern
                             </p>
                             <p style="font-family:'Caveat'; color:var(--ink-blue); font-size:1.2rem; text-align:center; margin-top:10px; font-style:italic; padding-top: 10px; border-top: 1px dashed rgba(0,0,0,0.1);">
-                                "Råttkungen kallade mig 'soldat'. Jag nickade bara. Sa inte att min enda erfarenhet är uppvisningsmatcher med trubbiga vapen. Nu ska jag stå längst fram? Okej. Andas. Låt dem inte se att händerna skakar. Fake it 'til you make it, Kurt."
+                                "Råttkungen kallade mig 'soldat'. Jag nickade bara. Sa inte att min erfarenhet är arenan, inte krig. Men jag vann tre år i rad av en anledning. Stål är stål. Ingen darrning, ingen tvekan. Jag må vara ny i träsket, men jag vet hur man slåss. Dags att visa dem varför jag är en mästare."
                             </p>
                         </div>
                         
