Update Level 3 Preview text to Swedish

--- a/index.html
+++ b/index.html
@@ -1211,11 +1211,12 @@
                         
                         <!-- NEW: Level 3 Preview -->
                         <details style="margin-top: 15px;">
-                            <summary style="font-family: 'Cinzel'; font-size: 0.9rem; cursor: pointer;">Level 3 Preview (Next Level)</summary>
+                            <summary style="font-family: 'Cinzel'; font-size: 0.9rem; cursor: pointer;">Level 3 Preview (Nästa Nivå)</summary>
                             <ul style="margin-top: 10px; font-size: 0.95rem;">
-                                <li><strong>Channel Divinity:</strong> Vow of Enmity (advantage på attacks, 1 min)</li>
-                                <li><strong>Oath Spells:</strong> Hunter's Mark (no concentration i 2024!), Hold Person</li>
-                                <li><strong>Lay on Hands Pool:</strong> 15 HP (5 × level 3)</li>
+                                <li><strong>Channel Divinity:</strong> Vow of Enmity (Advantage på attacker mot en fiende, 1 min) eller Abjure Enemies.</li>
+                                <li><strong>Spell Slots:</strong> Ökar till 3 st (Nivå 1).</li>
+                                <li><strong>Alltid Förberedd:</strong> Hunter's Mark (Nu utan Concentration om du fokuserar skadan!).</li>
+                                <li><strong>Lay on Hands:</strong> Ökar till 15 HP.</li>
                             </ul>
                         </details>
                     </div>
