Clarify Siegerkette description and add details
Updated descriptions for Siegerkette and its significance in Weinberg-Fehde.

--- a/index.html
+++ b/index.html
@@ -1200,7 +1200,7 @@
 
                         <div style="background: rgba(0,0,0,0.03); padding: 10px; border-radius: 4px;">
                             <div style="font-family: 'Cinzel', serif; font-size: 0.8rem; color: var(--text-sub);">Bakgrundsdrag (Gladiator)</div>
-                            <strong>Avskräckande Närvaro:</strong> <span style="font-family: 'EB Garamond'; font-style: italic;">I Lisse vet ingen vem jag var, men de ser vad jag är. Värdshusvärdar låter mig sova gratis i salen, inte av vänlighet, utan för att ingen vågar starta bråk när en två meter lång drake i rustning sitter i hörnet. Jag är deras passiva beskydd – betalning genom ren skräckfaktor.</span>
+                            <strong>Avskräckande Fysik:</strong> <span style="font-family: 'EB Garamond'; font-style: italic;">I Lisse vet ingen vem jag var, men de ser vad jag är. Värdshusvärdar låter mig sova gratis i salen, inte av vänlighet, utan för att ingen vågar starta bråk när en två meter lång drake i rustning sitter i hörnet. Jag är deras passiva beskydd – betalning genom ren råstyrka och skräckfaktor.</span>
                         </div>
                     </div>
 
@@ -1240,7 +1240,8 @@
                             <li><i class="fas fa-tshirt"></i> Rostig Ringbrynja</li>
                             <li><i class="fas fa-shield-alt"></i> Bucklig Sköld</li>
                             <li><i class="fas fa-khanda"></i> Långsvärd (Zügwern)</li>
-                            <li><i class="fas fa-link"></i> Siegerkette (Helig Symbol)</li>
+                            <!-- UPDATED: Clarified Siegerkette = Vinrankan -->
+                            <li style="grid-column: 1 / -1;"><i class="fas fa-link"></i> <strong>Siegerkette (Vinrankan)</strong><br><span style="font-size:0.85em; opacity:0.8; font-style:italic;">Tre segerringar runt fästet. Min Heliga Symbol.</span></li>
                         </ul>
                         <p style="font-family: 'Caveat', cursive; font-size: 1.1rem; color: var(--ink-blue); text-align: center; margin-top: 10px;">"Res lätt. Äg bara det du kan blöda för."</p>
                     </div>
@@ -1473,10 +1474,10 @@
                                 <div class="info-card">
                                     <h3 style="text-align: center;"><i class="fas fa-trophy"></i> Weinberg-Fehde (Vingårdsfejden)</h3>
                                     <p style="font-family: 'EB Garamond', serif; font-size: 1.1rem; line-height: 1.7;">
-                                        <strong>Siegerkette</strong> (Zügwernska för <em>"Segrarkedjan"</em>) är inte ett smycke, utan en trofé. För varje seger i <strong>Weinberg-Fehde</strong> <em>(Vingårdsfejden)</em> vinner man en silverlänk formad som en vinranka.
+                                        <strong>Siegerkette</strong> (Zügwernska för <em>"Segrarkedjan"</em>) är inte ett smycke, utan en trofé. Varje seger ger en ring. Tillsammans bildar ringarna en silverranka som klättrar längs svärdsfästet – därav smeknamnet "Vinrankan".
                                     </p>
                                     <p style="font-family: 'EB Garamond', serif; font-size: 1rem; margin-top: 10px;">
-                                        Dessa länkar smids fast runt segrarens svärdsfäste. Tre segrar gav mig tre ringar – en början på en ranka som nu spricker i den tropiska hettan.
+                                        Mina tre segrar gav mig tre ringar. Denna påbörjade ranka är min stolthet, mitt bevis, och min <strong>Heliga Symbol</strong>.
                                     </p>
                                     
                                     <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 15px; margin: 25px 0; text-align: center;">
@@ -1841,7 +1842,7 @@
                         </div>
                     </div>
 
-                    <h4 style="font-family:'Cinzel'; color:var(--ink-color); text-align:center; margin-bottom:10px;">🔮 Ritualer (Alltid Tillgängliga)</h4>
+                    <h4 style="font-family:'Cinzel'; color:var(--ink-color); text-align:center; margin-bottom:10px;"><i class="fas fa-book-open"></i> Ritualer (Alltid Tillgängliga)</h4>
                     <p style="text-align:center; font-size:0.8rem; margin-bottom:10px; font-style:italic;">Kräver ingen preparation. Tar +10 minuter att kasta.</p>
                     
                     <div class="spell-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
