Update quotes in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                                     <strong style="color: var(--text-sub); font-family: 'Cinzel';">Bekämpa den Större Ondskan</strong><br>
                                     <span style="font-family: 'EB Garamond'; font-style: italic;">"Fäll Mästaren Först."</span>
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "I arenan slösar man inte kraft på gycklarna. Man går rakt på mästaren. Småskurkar flyr när tyrannen faller. Fokusera. Hugg huvudet av ormen, oroa dig inte för svansen."
+                                        "Prioritera alltid det största hotet. Låt småskurkar gå om det krävs för att fälla tyrannen. I arenan hugger man huvudet av ormen, man oroar sig inte för svansen."
                                     </p>
                                 </li>
 
@@ -985,7 +985,7 @@
                                     <strong style="color: var(--text-sub); font-family: 'Cinzel';">Ingen Nåd för de Onda</strong><br>
                                     <span style="font-family: 'EB Garamond'; font-style: italic;">"Rosten Måste Bort."</span>
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "En fiende som kapitulerar hederligt kan få nåd. Men ondska... ondska är som rost. Det går inte att polera bort. Det måste skäras ut helt. Tvekan är bara en inbjudan till mer korrosion."
+                                        "En fiende som kapitulerar kan få nåd, men svuren ondska ska förgöras utan tvekan. Ondska är som rost. Det går inte att polera bort. Det måste skäras ut helt."
                                     </p>
                                 </li>
 
@@ -993,7 +993,7 @@
                                     <strong style="color: var(--text-sub); font-family: 'Cinzel';">Med Alla Medel</strong><br>
                                     <span style="font-family: 'EB Garamond'; font-style: italic;">"Seger Kräver Smuts."</span>
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "Min rustning är redan ful och rostig. Mitt samvete tål en fläck till om det krävs för att stoppa monstret. Heder sitter inte i hur blankt stålet är, utan i resultatet. Jag gör det ingen annan vågar."
+                                        "Mina samvetskval får aldrig stå ivägen för att stoppa ondskan. Min rustning är redan ful och ärrad. Mitt samvete tål en fläck till om det krävs."
                                     </p>
                                 </li>
 
@@ -1001,7 +1001,7 @@
                                     <strong style="color: var(--text-sub); font-family: 'Cinzel';">Gottgörelse</strong><br>
                                     <span style="font-family: 'EB Garamond'; font-style: italic;">"Skydda Publiken."</span>
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "En mästare slåss för de som sitter på läktaren. Om min jakt trampar ner oskyldiga skördar, då är det min plikt att så nytt. De värdiga ska inte lida för mitt krig."
+                                        "Om mina fiender skadar oskyldiga på grund av min jakt, måste jag hjälpa offren. De värdiga ska inte lida för mitt krig."
                                     </p>
                                 </li>
 
