Revise timeline and relation descriptions
Updated timeline entry for year 100072 and modified relation description.

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,8 @@
                                     <li><span class="timeline-date">År 100069 (21 år)</span><span class="timeline-desc"><i class="fas fa-trophy"></i> 1:a Weinberg-Fehde Titeln.</span></li>
                                     <li><span class="timeline-date">År 100070 (22 år)</span><span class="timeline-desc"><i class="fas fa-trophy"></i> 2:a Weinberg-Fehde Titeln.</span></li>
                                     <li><span class="timeline-date">År 100071 (23 år)</span><span class="timeline-desc"><i class="fas fa-trophy"></i> 3:e Weinberg-Fehde Titeln.</span></li>
-                                    <li><span class="timeline-date">År 100072 (Nu)</span><span class="timeline-desc"><i class="fas fa-times-circle"></i> Förlust mot Kaspar Falkenschlag. Exil.</span></li>
+                                    <!-- UPDATED: Removed "Exil", changed to "Jakt på upprättelse" -->
+                                    <li><span class="timeline-date">År 100072 (Nu)</span><span class="timeline-desc"><i class="fas fa-arrow-right"></i> Förlust mot Kaspar. Reser till Lisse för revansch.</span></li>
                                 </ul>
 
                                 <h4 style="font-family: 'Cinzel'; margin: 10px 0 5px 0; border-top: 1px dashed rgba(0,0,0,0.2); padding-top: 10px;">Arvet & Avresan</h4>
@@ -1881,8 +1882,8 @@
 
                             <div class="person-meta">
                                 <p><strong>Status:</strong> Segrare i Zügwern</p>
-                                <!-- UPDATED RELATION: Referring to Kurt's motive -->
-                                <p><strong>Relation:</strong> Orsaken till min exil. Jag är härrr. För att återvinna hedern. Han tog den.</p>
+                                <!-- UPDATED RELATION: Changed "Exil" to "Resa/Revansch" -->
+                                <p><strong>Relation:</strong> Målet för min resa. Jag är härrr för att möta honom igen. Han har min heder. Jag ska ta tillbaka den.</p>
                             </div>
                         </div>
                     </div>
