Fix typo in timeline description

--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@
                                     <span class="timeline-date">Vecka 1</span>
                                     <span class="timeline-desc" style="display: block; margin-bottom: 5px;"><strong>Det Kalla Uppvaknandet</strong></span>
                                     <p style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-bottom: 8px;">
-                                        Jag kom hit för att möta Kaspar Falkenschlag, Tournesol-riddaren, vid den stora turneringen... Allt för att jaga ett spöke som nu är en rik Solrosriddare.
+                                        Jag kom hit för att möta Kaspar Falkenschlag, Tournesol-riddaren, vid den stora turneringen... Allt för att jaga ett spöke som nu är en Solrosriddare.
                                     </p>
                                     <p style="font-family: 'Caveat'; color: #8b0000; font-size: 1.1rem;">
                                         "Turneringen lades ner för 5 år sedan. Pappret är värt mindre än fisken de rensar här. Jag är fast i träsket utan mynt och utan returbiljett."
