--- a/index.html
+++ b/index.html
@@ -1128,27 +1128,27 @@
                                 </p>
                             </div>
 
-                            <!-- Religion -->
+                            <!-- Religion (UPDATED) -->
                             <div style="background: rgba(0,0,0,0.03); padding: 15px; border-radius: 4px; border-left: 3px solid var(--text-sub);">
                                 <div style="font-family: 'Cinzel', serif; font-size: 0.9rem; color: var(--text-sub); display:flex; justify-content:space-between;">
                                     <span>Religion (Paladin)</span>
                                     <span>+2</span>
                                 </div>
-                                <div style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-top:5px; font-weight:bold;">Eden & Kedjan</div>
+                                <div style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-top:5px; font-weight:bold;">Riten Överlever</div>
                                 <p style="font-family: 'Caveat', cursive; font-size: 1.1rem; color: var(--ink-color); margin-top: 5px; line-height: 1.3;">
-                                    "Jag läser inte prästernas böcker. Min tro sitter i Eden. I kedjan runt mitt svärd. Jag förstår offret. Jag förstår plikten. Det räcker för gudarna."
+                                    "Farfars rökelse. Prästskruden. Liturgin jag minns. Gudarna som skulle lyssna? Försvunna. Men ritualerna... de fungerar ändå. Som skelett utan kött. Jag förstår ceremonin. Inte för deras skull. För min. Eden är allt som finns kvar."
                                 </p>
                             </div>
 
-                            <!-- Persuasion -->
+                            <!-- Persuasion (UPDATED) -->
                             <div style="background: rgba(0,0,0,0.03); padding: 15px; border-radius: 4px; border-left: 3px solid var(--text-sub);">
                                 <div style="font-family: 'Cinzel', serif; font-size: 0.9rem; color: var(--text-sub); display:flex; justify-content:space-between;">
                                     <span>Persuasion (Paladin)</span>
                                     <span>+4</span>
                                 </div>
-                                <div style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-top:5px; font-weight:bold;">Sanningens Egg</div>
+                                <div style="font-family: 'EB Garamond'; font-size: 0.95rem; margin-top:5px; font-weight:bold;">Tyngdens Trovärdighet</div>
                                 <p style="font-family: 'Caveat', cursive; font-size: 1.1rem; color: var(--ink-color); margin-top: 5px; line-height: 1.3;">
-                                    "Jag ljuger inte. Jag säger hur det är. Om sanningen får dem att öppna portarna... bra. Ett ärligt ord skär ibland djupare än ett svärd."
+                                    "Drake. Rustning. Folk lyssnar. Inte för att jag är charmerande - för att jag tar plats. När jag säger något, sant eller inte, rösten bär. Arenan lärde mig timing. När man ropar. När man viskar. Det... funkar här också."
                                 </p>
                             </div>
 
@@ -1185,26 +1185,26 @@
                                 </li>
 
                                 <li style="margin-bottom: 15px; border-left: 3px solid var(--text-sub); padding-left: 10px;">
-                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Ingen Nåd för de Onda</strong><br>
-                                    <span style="font-family: 'EB Garamond'; font-style: italic;">"Rosten Måste Bort."</span>
+                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Publiken Är Helig</strong><br>
+                                    <!-- NO SUBTITLE -->
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "En fiende som kapitulerar kan få nåd, men svuren ondska ska förgöras utan tvekan. Ondska är som rost. Det går inte att polera bort. Det måste skäras ut helt."
+                                        "I arenan blödde riddare. Aldrig publiken. Det var regeln. Här? Folk som inte håller vapen, som inte valde striden... de är publiken. Du rör dem inte. Gör du det ändå? Då är du värre än fienden."
                                     </p>
                                 </li>
 
                                 <li style="margin-bottom: 15px; border-left: 3px solid var(--text-sub); padding-left: 10px;">
-                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Med Alla Medel</strong><br>
-                                    <span style="font-family: 'EB Garamond'; font-style: italic;">"Seger Kräver Smuts."</span>
+                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Turneringen Hade Gränser</strong><br>
+                                    <!-- NO SUBTITLE -->
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "Mina samvetskval får aldrig stå ivägen för att stoppa ondskan. Min rustning är redan ful och ärrad. Mitt samvete tål en fläck till om det krävs."
+                                        "I Weinberg-Fehde visste alla risken. Alla valde att vara där. I Lisse? Folk bara lever sina liv. Om jag drar problem till dem, om de skadas på grund av mig... då är det mitt ansvar att rätta till."
                                     </p>
                                 </li>
 
                                 <li style="margin-bottom: 15px; border-left: 3px solid var(--text-sub); padding-left: 10px;">
-                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Gottgörelse</strong><br>
-                                    <span style="font-family: 'EB Garamond'; font-style: italic;">"Skydda Publiken."</span>
+                                    <strong style="color: var(--text-sub); font-family: 'Cinzel';">Publiken Glömmer Inte</strong><br>
+                                    <!-- NO SUBTITLE -->
                                     <p style="margin: 5px 0 0 0; color: var(--ink-color); font-family: 'Caveat'; font-size: 1.1rem;">
-                                        "Om mina fiender skadar oskyldiga på grund av min jakt, måste jag hjälpa offren. De värdiga ska inte lida för mitt krig."
+                                        "I arenan kunde man vinna fult. Men publiken var brutala. Såg de feghet, hänsynslöshet... tystnad. Ingen ära kvar. Bara en tom ring. Folk minns. Krossar jag oskyldiga för min seger... vad står jag där med sen?"
                                     </p>
                                 </li>
 
