Update group header and oath text in index.html
Updated the group header from 'Världen' to 'Wärlden' and changed the oath text to a new version.

--- a/index.html
+++ b/index.html
@@ -897,7 +897,7 @@
         </button>
 
         <!-- GROUP 2: VÄRLDEN -->
-        <div class="nav-group-header">Världen</div>
+        <div class="nav-group-header">Wärlden</div>
         <button class="nav-btn" id="btn-quest" onclick="showSection('quest')">
             <span class="nav-icon"><i class="fas fa-scroll"></i></span> Uppdrag
         </button>
@@ -1170,7 +1170,10 @@
                     <!-- OATH OF VENGEANCE (RESTORED) -->
                     <div class="info-card" style="border-left: 4px solid var(--theme-quest);">
                         <h3><i class="fas fa-scroll"></i> Hämnarens Ed</h3>
-                        <p style="font-style: italic; text-align: center; margin-bottom: 20px; font-family: 'Caveat', cursive; font-size: 1.3rem; color: var(--ink-blue);">"Jag svär att förgöra de som förvägrar ära åt de värdiga..."</p>
+                        <!-- UPDATED: New Oath Text -->
+                        <p style="font-style: italic; text-align: center; margin-bottom: 20px; font-family: 'Caveat', cursive; font-size: 1.3rem; color: var(--ink-blue);">
+                            Världen är en turnering utan regler. Jag svär att ge den några. Skydda publiken. Bekämpa det som är fel. Hämnas på svek. Vinn tillbaka publiken!
+                        </p>
                         
                         <details open>
                             <summary style="font-family: 'Cinzel'; font-weight: 600; cursor: pointer;">Edens Budord (Enligt Kurt)</summary>
