Rename nav group header from 'Krigaren' to 'Kurt. E'

--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
         <div class="book-title" onclick="showSection('hero')">Kampanjkodex</div>
         
         <!-- GROUP 1: KRIGAREN -->
-        <div class="nav-group-header">Krigaren</div>
+        <div class="nav-group-header">Kurt. E</div>
         <button class="nav-btn" id="btn-char" onclick="showSection('char')">
             <span class="nav-icon"><i class="fas fa-user-shield"></i></span> Karaktär
         </button>
