Revise image sources and captions in index.html
Updated image references and captions for clarity and accuracy.

--- a/index.html
+++ b/index.html
@@ -958,12 +958,13 @@
                         <h2 style="font-family: 'Cinzel', serif; font-size: 1.8rem; color: #5c3d2e; margin: 0 0 5px 0;">Kurt Eisenwald</h2>
                         <p style="font-family: 'EB Garamond', serif; font-size: 1.2rem; color: #4a3626; font-style: italic; margin-bottom: 25px;">"Weinbergsiegern"</p>
                         
-                        <!-- MAIN IMAGE (Kurt Full Outfit with Priest Pack) -->
-                        <div class="sketch-container" style="margin: 20px auto; max-width: 80%;">
+                        <!-- MAIN IMAGE (Kurt in Lisse Landsknecht Style - FINAL VERSION) -->
+                        <!-- CROP FIX: Overflow hidden on container, Scale up image slightly to cut off drawn book edges -->
+                        <div class="sketch-container" style="margin: 20px auto; max-width: 80%; overflow: hidden; border-bottom: 1px solid rgba(139, 90, 43, 0.3); padding-bottom: 10px;">
                             <!-- REMOVED INLINE MIX-BLEND-MODE & FILTER for clean display -->
-                            <img src="https://raw.githubusercontent.com/nordsym/DD/refs/heads/main/kurtfulloutfit.svg" 
-                                 alt="Kurt Eisenwald Full Utrustning" 
-                                 style="width: 100%; height: auto; display: block; border-bottom: 1px solid rgba(139, 90, 43, 0.3); padding-bottom: 10px;">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/nordsym-funnel.firebasestorage.app/o/kurtilisse3.svg?alt=media&token=b32847ea-895d-4da0-8ff1-62fa7c2d4e74" 
+                                 alt="Kurt Eisenwald i Lisse (Landsknecht)" 
+                                 style="width: 100%; height: auto; display: block; transform: scale(1.04); transform-origin: center;">
                         </div>
 
                         <!-- Info Footer -->
@@ -1313,9 +1314,8 @@
                         <div class="wax-seal"></div>
                         <!-- REMOVED INLINE MIX-BLEND-MODE & FILTER: Now using CSS variables -->
                         <img data-src="https://raw.githubusercontent.com/nordsym/DD/refs/heads/main/Kurt%20rustning%20closeup.svg" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Crect fill='transparent' width='100' height='100'/%3E%3C/svg%3E" alt="Kurt Rustning Skiss (Närbild Ringbrynja)" style="width: 100%; height: auto;">
-                        <!-- Text removed per request: "Klimatet dödar stålet..." -->
                     </div>
-                    <span class="handwritten-caption" style="display:block; margin-top:10px;">Smed. Nu. Stålet... det dör i fukten. Luktar som fisk. <strong>Verdammt.</strong></span>
+                    <span class="handwritten-caption" style="display:block; margin-top:10px;">Rosten äter länkarna. Särskilt vid benskydden. Fukten kryper in överallt. Snart låser sig lederna.</span>
                 </div>
 
                 <!-- Shield Sketch Card (UPDATED: Zügwern Shield) -->
@@ -1327,10 +1327,9 @@
                         <img data-src="https://raw.githubusercontent.com/nordsym/NordSym-Logga/refs/heads/main/sko%CC%88ld.svg" 
                              alt="Zügwern Sköld" 
                              style="width: 100%; height: auto;">
-                        <!-- REMOVED: "Zügwern-ek!" blueprint text -->
                     </div>
-                    <!-- Updated Caption -->
-                    <span class="handwritten-caption" style="display:block; margin-top:10px;">Standardmodell från dalen. Motivet bärs av många. Inget unikt, men det stoppar hugg.</span>
+                    <!-- Updated Caption: Steel, not wood -->
+                    <span class="handwritten-caption" style="display:block; margin-top:10px;">3mm valvad plåt. Zügwern-stål med valsad kant. Tung som ett berg, men den viker sig inte.</span>
                 </div>
 
                 <!-- JAVELINS (NEW CARD) -->
@@ -1342,7 +1341,7 @@
                              alt="Zügwern Kastspjut" 
                              style="width: 100%; height: auto;">
                     </div>
-                    <span class="handwritten-caption" style="display:block; margin-top:10px;">Tunga spetsar. För plåt, inte jakt. Kasta med kraft.</span>
+                    <span class="handwritten-caption" style="display:block; margin-top:10px;">Svarta skaft, tunga spetsar. Gjorda för att slå igenom plåt, inte för jakt. Kasta med hela ryggen.</span>
                 </div>
 
                 <!-- Current Weapon -->
@@ -1359,7 +1358,7 @@
                              alt="Zügwern Sword"
                              style="width: 100%; height: auto;">
                     </div>
-                    <span class="handwritten-caption">Zügwernskt hantverk. Känns som hemma. Men mässingen... den rostar också.</span>
+                    <span class="handwritten-caption">Bergsryggen i bladet. Vintunnan som pommel. Och viktigast: Silverrankan runt fästet. Tre segrar.</span>
                 </div>
 
                 <!-- REMOVED DUPLICATE SHIELD AND WEAPON CARDS -->
@@ -1745,7 +1744,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 1 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">3 creatures, -1d4 on attacks & saves. (CHA Save).</p>
-                            <div class="kurt-comment">"Arenan lärde mig detta. Försvaga dem. Innan första hugget."</div>
+                            <div class="kurt-comment">"Deras händer darrar nu."</div>
                         </div>
                         <div class="spell-card info-card oath-spell" style="border-left: 3px solid var(--accent-gold); background: rgba(197, 160, 89, 0.05);">
                             <div class="oath-badge">Edsvuren</div>
@@ -1756,7 +1755,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 1 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">Force 1v1 focus. Disadv attacking others. WIS Save.</p>
-                            <div class="kurt-comment">"Tvinga fokus. Som Weinberg-Fehde. Bara du. Och din fiende."</div>
+                            <div class="kurt-comment">"En-mot-en. Som det ska vara."</div>
                         </div>
                     </div>
 
@@ -1774,7 +1773,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 1 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">3 creatures: +1d4 on attacks & saves.</p>
-                            <div class="kurt-comment">"Inte gudarnas välsignelse. Min vilja. Ni överleverrr. För att jag säger det."</div>
+                            <div class="kurt-comment">"Marginalen var alltid hårfin."</div>
                         </div>
 
                         <!-- CURE WOUNDS -->
@@ -1787,7 +1786,7 @@
                                 <span><i class="fas fa-check"></i> Instant</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">Heal 1d8 + CHA (2). Higher slots: +1d8.</p>
-                            <div class="kurt-comment">"Smärta är information. Men du dörrr inte. Inte idag. Res dig."</div>
+                            <div class="kurt-comment">"Trycker där värmen finns kvar."</div>
                         </div>
 
                         <!-- SHIELD OF FAITH -->
@@ -1800,7 +1799,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 10 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">Target gets +2 AC.</p>
-                            <div class="kurt-comment">"+2 AC. Det håller mig vid liv. Eden ärrr min sköld."</div>
+                            <div class="kurt-comment">"Luften blir tätare. <strong>Gut.</strong>"</div>
                         </div>
 
                         <!-- PROT EVIL/GOOD -->
@@ -1813,7 +1812,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 10 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">Disadv to hit you (Fiend/Undead). Immune Charm/Fear.</p>
-                            <div class="kurt-comment">"Äkta ondska? Får ingen nåd. Och ingen t-rr-äff."</div>
+                            <div class="kurt-comment">"Odöda var sagor hemma."</div>
                         </div>
                         
                         <!-- HEROISM -->
@@ -1826,7 +1825,7 @@
                                 <span><i class="fas fa-hourglass-half"></i> Conc 1 min</span>
                             </div>
                             <p style="font-family: 'EB Garamond', serif;">Immune Fear + CHA Mod Temp HP/turn.</p>
-                            <div class="kurt-comment">"Vägra ge upp. Det är inte mod. Det ärrr envishet."</div>
+                            <div class="kurt-comment">"Reste mig ändå. Du också."</div>
                         </div>
 
                     </div>
@@ -1852,7 +1851,7 @@
                                 När du träffar med en närstridsattack, bränn en <strong>Spell Slot</strong> för att göra extra <strong>2d8 Radiant Damage</strong> (+1d8 per slot-nivå över 1).
                             </p>
                             <div class="kurt-comment" style="color: var(--accent-gold); border-color: rgba(197, 160, 89, 0.4);">
-                                "Ingen magi. Detta är vrede. Kanaliserad genom stål. Odöda förstår bara ett språk. Smärta. Kostar kraft. Men det... avslutar. <strong>Genau.</strong>"
+                                "Odöda kollapsar. Ljus genom stålet."
                             </div>
                         </div>
 
@@ -1861,7 +1860,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-sun"></i> Divine Favor</h3>
                             <p style="font-size:0.8rem;"><strong>BA, Self, Conc 1 min.</strong> +1d4 Radiant dmg on ALL attacks.</p>
-                            <div class="kurt-comment" style="color: #8b0000;">"Varje slag måste räknas. Livet hänger på marginalerrr."</div>
+                            <div class="kurt-comment" style="color: #8b0000;">"Stålet lyser svagt."</div>
                         </div>
 
                         <!-- SEARING SMITE -->
@@ -1869,7 +1868,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-fire"></i> Searing Smite</h3>
                             <p style="font-size:0.8rem;"><strong>BA, Self, Conc 1 min.</strong> Hit: +1d6 Fire + Burn (CON save).</p>
-                            <div class="kurt-comment" style="color: #8b0000;">"Mässing-eld. Påminn dem varrr jag kommer ifrån."</div>
+                            <div class="kurt-comment" style="color: #8b0000;">"Mässing brinner gult. Hemma."</div>
                         </div>
 
                         <!-- THUNDEROUS SMITE -->
@@ -1877,7 +1876,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-bolt"></i> Thunderous Smite</h3>
                             <p style="font-size:0.8rem;"><strong>BA, Self, Conc 1 min.</strong> Hit: +2d6 Thunder + Push 10ft (STR save).</p>
-                            <div class="kurt-comment" style="color: #8b0000;">"Kraft över finess. De ska höra slaget."</div>
+                            <div class="kurt-comment" style="color: #8b0000;">"Domargongongen. Ljudet kommer."</div>
                         </div>
 
                         <!-- WRATHFUL SMITE -->
@@ -1885,7 +1884,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-brain"></i> Wrathful Smite</h3>
                             <p style="font-size:0.8rem;"><strong>BA, Self, Conc 1 min.</strong> Hit: +1d6 Psychic + Frightened (WIS save end).</p>
-                            <div class="kurt-comment" style="color: #8b0000;">"Rädsla är ett vapen. Jag vet."</div>
+                            <div class="kurt-comment" style="color: #8b0000;">"De ser något. De stannar."</div>
                         </div>
                     </div>
                 </div>
@@ -1904,7 +1903,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-bullhorn"></i> Command</h3>
                             <p style="font-size:0.8rem;"><strong>1 Act, 60ft.</strong> Order: Halt, Drop, Flee, Grovel. (WIS save).</p>
-                            <div class="kurt-comment">"Arena-röst. Ett ord. Det räcker när man har auktoritet."</div>
+                            <div class="kurt-comment">"Ett ord. 'HALT.'"</div>
                         </div>
 
                         <!-- DETECT EVIL/GOOD -->
@@ -1912,7 +1911,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;"><i class="fas fa-eye"></i> Detect Evil/Good</h3>
                             <p style="font-size:0.8rem;"><strong>1 Act, Self, Conc 10 min.</strong> Sense undead/fiends etc within 30ft.</p>
-                            <div class="kurt-comment">"Äkta ondska? Den... lyser. Annorlunda."</div>
+                            <div class="kurt-comment">"Lyser annorlunda. Rostat silver."</div>
                         </div>
 
                         <!-- PURIFY FOOD/DRINK -->
@@ -1920,7 +1919,7 @@
                             <div class="prep-indicator">☆</div>
                             <h3 style="font-size:1rem;">Purify Food & Drink</h3>
                             <p style="font-size:0.8rem;"><strong>1 Act, 10ft, Instant.</strong> Remove poison/disease from food.</p>
-                            <div class="kurt-comment">"Nödvändigt. Här ruttnar allt."</div>
+                            <div class="kurt-comment">"Orden gör maten säker."</div>
                         </div>
                     </div>
 
@@ -1932,13 +1931,13 @@
                             <div class="ritual-badge">Ritual</div>
                             <h3 style="font-size:1rem;">Detect Magic</h3>
                             <p style="font-size:0.8rem;">See magical auras within 30ft.</p>
-                            <div class="kurt-comment">"Magin lyser. Som rost på stål. Svår att missa."</div>
+                            <div class="kurt-comment">"Mönster i luften."</div>
                         </div>
                         <div class="spell-card info-card ritual-spell" style="padding:15px; border: 1px double var(--ink-color);">
                             <div class="ritual-badge">Ritual</div>
                             <h3 style="font-size:1rem;">Detect Poison/Disease</h3>
                             <p style="font-size:0.8rem;">Identify within 30ft.</p>
-                            <div class="kurt-comment">"Överlevnad. Lita aldrig på mat du inte sett tillagas."</div>
+                            <div class="kurt-comment">"Gift luktar koppar."</div>
                         </div>
                         <div class="spell-card info-card ritual-spell" style="padding:15px; grid-column: 1 / -1; border: 1px double var(--ink-color);">
                             <div class="ritual-badge">Ritual</div>
@@ -1949,6 +1948,7 @@
                                 <li><strong>Bless Water:</strong> Create Holy Water. <em style="font-family:'Caveat'; color:var(--ink-color);">"Vattnet blir heligt. När jag säger det."</em></li>
                                 <li><strong>Atonement:</strong> Restore alignment. <em style="font-family:'Caveat'; color:var(--ink-color);">"Kan eden rrrätta det rrrrosten förstört?"</em></li>
                             </ul>
+                            <div class="kurt-comment">"Orden gjorde folk lugnare."</div>
                         </div>
                     </div>
                 </div>
